# octopus

./: .env.example  .fix_exceptions.py  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Modelfile  README.md  agents.py  config.py  config.yaml  db.py  evasion.py  export.py  hash_cracker.py  memory.py  msf.py  octopus.py  pyproject.toml  requirements.txt  search.py  shodan_module.py  tools.py
.github/workflows/: ci.yml  nightly.yml
benchmarks/competitors/: README.md  catalog.json  run_adapter.py  run_campaign.py  run_diagnostic_adapter.py  run_lab.py  secrets.env.example
benchmarks/results/: noop-repeat-comparison-v1.json
benchmarks/scenarios/: 01-service-discovery-verification.json  02-web-api-mapping.json  03-credential-safe-validation.json  04-verified-ssh-inventory.json  05-authorized-internal-discovery.json  06-clean-negative.json  07-timeout-partial.json  08-invalid-empty-llm.json  09-crash-resume.json  10-contradictions.json
core/: __init__.py  application.py  colors.py  credential_ranking.py  credentials.py  secrets.py  supervisor.py  version.py
core/actions/: __init__.py  adapters.py  base.py  catalog.py  executor.py  models.py  selection.py  telemetry.py
core/ai/: __init__.py  agent_loop.py  asset_graph.py  capability_assessment.py  command_scheduler.py  context_builder.py  context_manager.py  credential_sync.py  decision_trace.py  director.py  evaluated_facts.py  evidence.py  exploit_applicability.py  fact_assessment.py  fact_engine.py  fact_store.py  followups.py  legacy_agents.py  llm_context.py  mission_store.py  mission_store_codecs.py  mission_store_maintenance.py  mission_store_models.py  mission_store_replans.py  mission_store_schema.py  mission_store_tasks.py  ollama_client.py  outcomes.py  pipeline.py  pipeline_followups.py  pipeline_mission.py  pipeline_observability.py  pipeline_planning.py  pipeline_replay.py  pipeline_telemetry.py  pipeline_types.py  pipeline_web_links.py  planner.py  policy.py  replay_snapshot.py  (+15 more)
core/benchmarks/: __init__.py  __main__.py  builtin_runner.py  harness.py  schema.py  task_efficiency.py
core/c2/: __init__.py  builder.py  crypto_engine.py  daemon.py  db_backend.py  enrollment.py  evasion.py  event_store.py  go.mod  go.sum  implant.go  key_store.py  operators.py  protocol.py
core/cli/: __init__.py  application.py  history.py  main.py  presentation.py
core/execution/: __init__.py  cancellation.py  models.py  normalization.py  policy.py  results.py
core/exploits/: __init__.py  exploit_mapper.py  selector.py
core/killchain/: __init__.py  cleanup.py  exfil.py  exploitation.py  lateral.py  orchestrator.py  persistence.py  pivot.py  privesc.py  ssh_helpers.py  vuln_assess.py
core/knowledge/: __init__.py  enricher.py  graph.py  identity.py  models.py  projection.py
core/observability/: __init__.py  audit.py  metrics.py
core/opsec/: artifact_mgr.py  ja3_client.go  network.py
core/osint/: __init__.py  shardbrowser.py
core/plugins/: base.py  events.py  loader.py  protocol.py  worker.py
core/recon/: recon_engine.py
core/tools/: __init__.py  base.py  exploit_tools.py  post_tools.py  recon_tools.py  registry.py  runner.py  targeting.py
core/transport/: base.py  profiles.py
data/: c2.db  default_admin.key  facts.db  knowledge.db  knowledge.db-shm  octopus-c2.service  supervisor_state.json
data/keys/: server_x25519_private.pem  server_x25519_public.pem
docs/: deprecations.yaml  release-checklist.md
docs/adr/: 0001-facts-assessments-and-projections.md  0002-action-adapters-and-execution-policy.md  0003-evidence-reports-and-decision-observability.md
docs/architecture/: action-lifecycle.md  canonical-graph.md  capability-assessment.md  cli-lifecycle.md  contracts-and-ownership.md  current-system-map.md  duplication-matrix.md  evidence-reporting-observability.md  fact-assessment.md  mission-lifecycle.md  pipeline-decomposition.md  provider-selection.md  (+2 more)
payloads/: agent.py
plugins/: __init__.py
quality/: coverage-ci.ini  vendor-manifest.json
requirements/: c2.txt  dev.txt  external-tools.txt  mysql.txt  osint-browser.txt  platform.txt  reporting.txt  runtime.txt  test.txt
scripts/: __init__.py  lock_requirements.py
tests/: __init__.py  conftest.py  test_action_catalog.py  test_action_provider_contracts.py  test_ai_runtime.py  test_c2_key_envelope.py  test_c2_protocol.py  test_c2_security.py  test_capability_assessment.py  test_cli_lifecycle.py  test_command_decision_contracts.py  test_command_scheduler_branches.py  test_config.py  test_credential_reference_boundary.py  test_credentials_access_contracts.py  test_db.py  test_decision_trace.py  test_deprecations_manifest.py  test_durable_retry_execution.py  test_entity_identity.py  test_evaluated_fact_snapshot.py  test_evidence_parser.py  test_evidence_report_schema.py  test_execution_gate.py  test_execution_policy.py  test_execution_reliability.py  test_execution_results.py  test_execution_scope_contracts.py  test_exploit_command_applicability.py  test_export.py  test_external_tools_smoke.py  test_fact_assessment.py  test_fact_assessment_policy.py  test_fact_engine.py  test_graph_assessment_sync.py  test_import_smoke.py  test_knowledge_graph_projection.py  test_lock_requirements.py  test_mission_store.py  test_mission_store_decomposition.py  (+40 more)
(+206 files in other folders)
